--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body,
 html
 {
+    font-family: 'ArcadeFont', sans-serif;
     overflow: hidden;
 }
 
@@ -19,3 +20,78 @@ html
     height: 100%;
     background: #000000;
 }
+
+.hide-element {
+    display: none;
+}
+
+
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.menu-lost {
+    background-image: url("assets/img/wejdene.jpg");
+    background-repeat: repeat;
+    background-size: 23%;
+}
+
+.menu-start {
+    background-image: url("assets/img/jul.jpg");
+    background-repeat: repeat;
+}
+
+@keyframes blink {
+    50% {
+        color: white;
+    }
+}
+
+.blink {
+    animation: blink 1s infinite;
+    color: black
+}
+
+button {
+    font-family: 'ArcadeFont', sans-serif;
+    background-color: #000000;
+    cursor: pointer;
+}
+
+.start-game-button {
+    font-size: 10em;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.you-lost {
+    background-color: #000000;
+    color: white;
+    font-size: 5em;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translate(-50%, -50%);
+}
+
+.retry-button {
+    font-size: 5em;
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    color: white
+}
+
+
+@font-face {
+    font-family: 'ArcadeFont';
+    src: url('./assets/font/ARCADECLASSIC.TTF') format('truetype');
+}
+  
