--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ html {
     width: 100%;
     height: 100%;
     background-color: black;
-    font-size: 5em;
 }
 
 @keyframes blink {
@@ -58,12 +57,13 @@ html {
 
 button {
     font-family: 'ArcadeFont', sans-serif;
+    color: white;
     background-color: #000000;
     cursor: pointer;
+    font-size: 5em;
 }
 
 .start-game-button {
-    font-size: 10em;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -71,6 +71,7 @@ button {
 }
 
 .result {
+    font-size: 5em;
     position: absolute;
     left: 50%;
     top: 20%;
